--- a/index.html
+++ b/index.html
@@ -12,5 +12,35 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Bookmark Website</title>
   </head>
-  <body></body>
+  <body class="overflow-x-hidden">
+    <!-- Navbar -->
+    <div class="nav container relative mx-auto p-6">
+      <!-- Flex Container for Nav Items -->
+      <div class="flex items-center justify-between space-x-20 my-6">
+        <!-- Logo -->
+        <div class="z-30">
+          <img src="images/logo-bookmark.svg" alt="" id="logo" />
+        </div>
+
+        <!-- Menu Items -->
+        <div
+          class="hidden items-center space-x-10 uppercase text-grayishBlue md:block"
+        >
+          <a href="#features" class="tracking-widest hover:text-softRed"
+            >Features</a
+          >
+          <a href="#download" class="tracking-widest hover:text-softRed"
+            >Download</a
+          >
+          <a href="#faq" class="tracking-widest hover:text-softRed">FAQ</a>
+          <!-- Login Button -->
+          <a
+            href="#"
+            class="px-8 py-2 text-white bg-softRed border-2 border-softRed rounded-lg shadow-md hover:text-softRed hover:bg-white"
+            >LOGIN</a
+          >
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
