--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="overflow-x-hidden">
     <!-- Navbar -->
-    <div class="nav container relative mx-auto p-6">
+    <nav class="container relative mx-auto p-6">
       <!-- Flex Container for Nav Items -->
       <div class="flex items-center justify-between space-x-20 my-6">
         <!-- Logo -->
@@ -41,6 +41,56 @@
           >
         </div>
       </div>
-    </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="hero">
+      <!-- Hero Container -->
+      <div
+        class="container flex flex-col-reverse mx-auto p-6 lg:flex-row lg:mb-0"
+      >
+        <!-- Content -->
+        <div class="flex flex-col space-y-6 lg:w-1/2 lg:mt-16">
+          <h1
+            class="text-3xl text-center font-semibold lg:text-6xl lg:text-left"
+          >
+            A Simple Bookmark Manager
+          </h1>
+          <p
+            class="max-w-md mx-auto text-lg text-gray-400 text-center lg:text-xl lg:text-left lg:mx-0"
+          >
+            A clean and simple interface to organize your favorite websites.
+            Open a new browser tab and see your sites load instantly.Try it for
+            free.
+          </p>
+          <!-- Buttons Container -->
+          <div
+            class="flex items-center justify-center w-full space-x-4 lg:justify-start"
+          >
+            <a
+              href="#"
+              class="p-4 text-sm text-white font-semibold bg-softBlue border-2 border-softBlue rounded shadow-md hover:text-softBlue hover:bg-white"
+              >Get It on Chrome</a
+            >
+            <a
+              href="#"
+              class="p-4 text-sm text-black font-semibold bg-gray-300 border-2 border-gray-300 rounded shadow-md hover:text-gray-500 hover:bg-white"
+              >Get It on Chrome</a
+            >
+          </div>
+        </div>
+        <!-- Image -->
+        <div class="relative mx-auto lg:mx-0 lg:mb-0 lg:w-1/2">
+          <div class="bg-hero"></div>
+          <img
+            src="images/illustration-hero.svg"
+            alt=""
+            class="relative z-10 lg:top-24 xl:top-0 overflow-x-visible"
+          />
+        </div>
+      </div>
+    </section>
+
+    <!-- Features Section -->
   </body>
 </html>
