--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/script.js" defer></script>
     <title>Bookmark Website</title>
   </head>
   <body class="overflow-x-hidden">
@@ -92,5 +93,151 @@
     </section>
 
     <!-- Features Section -->
+    <section id="features">
+      <div class="container mx-auto mt-12 px-6">
+        <h3 class="text-4xl mb-6 text-center font-semibold">Features</h3>
+        <p class="max-w-md mx-auto text-center text-grayishBlue">
+          Our aim is to make it quick and easy for you to access your favorite
+          websites. Your bookmarks sync between your advices so you can access
+          them on the go.
+        </p>
+      </div>
+    </section>
+
+    <!-- Features Tabs -->
+    <section id="tabs">
+      <div class="container mx-auto my-6 mb-6 mt-12 px-6">
+        <!-- Tabs Flex Container -->
+        <div
+          class="max-w-xl flex flex-col justify-center mx-auto border-b mb-6 md:flex-row md:space-x-6"
+        >
+          <!-- Tab 1 -->
+          <div
+            class="flex justify-center text-center border-b text-grayishBlue md:border-b-0 hover:text-softRed md:w-1/3 tab"
+            data-target="panel-1"
+          >
+            <div
+              class="py-5 border-b-4 border-softRed cursor-pointer"
+              data-target="panel-1"
+            >
+              Simple Bookmarking >
+            </div>
+          </div>
+          <!-- Tab 2 -->
+          <div
+            class="flex justify-center text-center border-b text-grayishBlue md:border-b-0 hover:text-softRed md:w-1/3 tab"
+            data-target="panel-2"
+          >
+            <div class="py-5 cursor-pointer" data-target="panel-2">
+              Speedy Searching
+            </div>
+          </div>
+          <!-- Tab 3 -->
+          <div
+            class="flex justify-center text-center border-b text-grayishBlue md:border-b-0 hover:text-softRed md:w-1/3 tab"
+            data-target="panel-3"
+          >
+            <div class="py-5 cursor-pointer" data-target="panel-3">
+              Easy Sharing
+            </div>
+          </div>
+        </div>
+        <!-- Tabs -->
+        <div id="panels" class="container mx-auto">
+          <!-- Panel 1 -->
+          <div
+            class="flex flex-col my-5 md:space-x-8 md:flex-row panel panel-1"
+          >
+            <div class="flex justify-center md:w-1/2">
+              <img
+                src="images/illustration-features-tab-1.svg"
+                alt=""
+                class="relative z-10"
+              />
+            </div>
+            <!-- Panel Content -->
+            <div class="flex flex-col mt-6 space-y-8 md:w-1/2">
+              <h3 class="text-3xl text-center font-semibold md:text-left">
+                Intelligent search
+              </h3>
+              <p class="max-w-md text-center text-grayishBlue md:text-left">
+                Organize your bookmarks however you like. Our simple
+                drag-and-drop interface gives you complete control over how you
+                manage your favorite sites.
+              </p>
+              <div class="mx-auto md:mx-0">
+                <a
+                  href="#"
+                  class="px-8 py-4 font-semibold text-white bg-softBlue border-2 border-white rounded-lg hover:text-softBlue hover:bg-white hover:border-b hover:border-softBlue"
+                  >More info</a
+                >
+              </div>
+            </div>
+          </div>
+          <!-- Panel 2 -->
+          <div
+            class="flex flex-col my-5 md:space-x-8 md:flex-row panel panel-2"
+          >
+            <div class="flex justify-center md:w-1/2">
+              <img
+                src="images/illustration-features-tab-2.svg"
+                alt=""
+                class="relative z-10"
+              />
+            </div>
+            <!-- Panel Content -->
+            <div class="flex flex-col mt-6 space-y-8 md:w-1/2">
+              <h3 class="text-3xl text-center font-semibold md:text-left">
+                Intelligent search
+              </h3>
+              <p class="max-w-md text-center text-grayishBlue md:text-left">
+                Organize your bookmarks however you like. Our simple
+                drag-and-drop interface gives you complete control over how you
+                manage your favorite sites.
+              </p>
+              <div class="mx-auto md:mx-0">
+                <a
+                  href="#"
+                  class="px-8 py-4 font-semibold text-white bg-softBlue border-2 border-white rounded-lg hover:text-softBlue hover:bg-white hover:border-b hover:border-softBlue"
+                  >More info</a
+                >
+              </div>
+            </div>
+          </div>
+          <!-- Panel 3 -->
+          <div
+            class="flex flex-col py-5 md:space-x-8 md:flex-row panel panel-3"
+          >
+            <div class="flex justify-center md:w-1/2">
+              <img
+                src="images/illustration-features-tab-3.svg"
+                alt=""
+                class="relative z-10"
+              />
+            </div>
+            <!-- Panel Content -->
+            <div class="flex flex-col mt-6 space-y-8 md:w-1/2">
+              <h3 class="text-3xl text-center font-semibold md:text-left">
+                Intelligent search
+              </h3>
+              <p class="max-w-md text-center text-grayishBlue md:text-left">
+                Organize your bookmarks however you like. Our simple
+                drag-and-drop interface gives you complete control over how you
+                manage your favorite sites.
+              </p>
+              <div class="mx-auto md:mx-0">
+                <a
+                  href="#"
+                  class="px-8 py-4 font-semibold text-white bg-softBlue border-2 border-white rounded-lg hover:text-softBlue hover:bg-white hover:border-b hover:border-softBlue"
+                  >More info</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Download Boxes -->
   </body>
 </html>
