--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <!-- Features Tabs -->
     <section id="tabs">
       <div class="container mx-auto my-6 mb-6 mt-12 px-6">
+        <!-- <div class="bg-tabs"></div> -->
         <!-- Tabs Flex Container -->
         <div
           class="max-w-xl flex flex-col justify-center mx-auto border-b mb-6 md:flex-row md:space-x-6"
@@ -238,6 +239,85 @@
       </div>
     </section>
 
+    <!-- Download Heading -->
+    <section id="download">
+      <div class="container mx-auto px-6 mt-20">
+        <h2 class="text-3xl mb-6 text-center font-semibold md:text-4xl">
+          Download the extension
+        </h2>
+        <p class="max-w-lg mx-auto text-center text-grayishBlue mb-10">
+          We've got more browsers in the pipeline. Please do let us know if
+          you've got a favorite you'd like us to prioritize.
+        </p>
+      </div>
+    </section>
+
     <!-- Download Boxes -->
+    <section id="boxes" class="py-12">
+      <!-- Flex Container -->
+      <div
+        class="flex flex-col max-w-5xl mx-auto py-5 items-center px-10 space-y-7 md:space-y-0 md:space-x-4 md:px-6 md:flex-row"
+      >
+        <!-- Box 1 -->
+        <div
+          class="w-full flex flex-col space-y-5 py-10 rounded-xl shadow-lg md:w-1/3"
+        >
+          <div class="flex justify-center">
+            <img src="images/logo-chrome.svg" alt="" />
+          </div>
+          <h4 class="pt-5 text-xl text-center font-semibold">Add to Chrome</h4>
+          <p class="text-center text-grayishBlue">Minimum version 62</p>
+          <div class="px-6 pt-4">
+            <a
+              href="#"
+              class="block py-3 w-full text-center text-white bg-softBlue border-2 rounded-lg duration-200 hover:text-softBlue hover:bg-white hover:border-softBlue"
+              >Add & Install Extension</a
+            >
+          </div>
+        </div>
+        <!-- Box 2 -->
+        <div class="w-full md:w-1/3">
+          <div
+            class="w-full flex flex-col space-y-5 py-10 rounded-xl shadow-lg md:mt-8"
+          >
+            <div class="flex justify-center">
+              <img src="images/logo-firefox.svg" alt="" />
+            </div>
+            <h4 class="pt-5 text-xl text-center font-semibold">
+              Add to Firefox
+            </h4>
+            <p class="text-center text-grayishBlue">Minimum version 62</p>
+            <div class="px-6 pt-4">
+              <a
+                href="#"
+                class="block py-3 w-full text-center text-white bg-softBlue border-2 rounded-lg duration-200 hover:text-softBlue hover:bg-white hover:border-softBlue"
+                >Add & Install Extension</a
+              >
+            </div>
+          </div>
+        </div>
+        <!-- Box 3 -->
+        <div class="w-full md:w-1/3">
+          <div
+            class="w-full flex flex-col space-y-5 py-10 rounded-xl shadow-lg md:mt-16"
+          >
+            <div class="flex justify-center">
+              <img src="images/logo-opera.svg" alt="" />
+            </div>
+            <h4 class="pt-5 text-xl text-center font-semibold">Add to Opera</h4>
+            <p class="text-center text-grayishBlue">Minimum version 62</p>
+            <div class="px-6 pt-4">
+              <a
+                href="#"
+                class="block py-3 w-full text-center text-white bg-softBlue border-2 rounded-lg duration-200 hover:text-softBlue hover:bg-white hover:border-softBlue"
+                >Add & Install Extension</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--  -->
   </body>
 </html>
