--- a/index.html
+++ b/index.html
@@ -318,6 +318,137 @@
       </div>
     </section>
 
-    <!--  -->
+    <!-- FAQ Heading  -->
+    <section id="faq">
+      <div class="container mx-auto">
+        <h2 class="mb-6 text-3xl text-center font-semibold md:text-4xl">
+          Frequently Asked Questions
+        </h2>
+        <p class="max-w-lg mx-auto px-6 text-center text-grayishBlue">
+          Here are some fo our FAQs. If you have any other questions you'd like
+          answered please feel free to email us.
+        </p>
+      </div>
+    </section>
+
+    <section id="faq-accordion">
+      <!-- Main Container -->
+      <div class="container mx-auto px-6 mb-16">
+        <!-- Accordion Container -->
+        <div class="max-w-2xl m-8 mx-auto overflow-hidden">
+          <!-- Tab 1 -->
+          <div class="py-1 border-b outline-none group" tabindex="1">
+            <!-- Tab Flex Container -->
+            <div
+              class="flex items-center justify-between text-gray-500 py-3 transtion hover:text-red-500 cursor-pointer ease goup"
+            >
+              <!-- Tab Title -->
+              <div
+                class="transition duration-500 ease group-hover:text-red-500"
+              >
+                What is Bookmark?
+              </div>
+              <!-- Arrow -->
+              <div
+                class="transition duration-500 ease group-hover:text-red-500 group ease group-focus:-rotate-180"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+                  <path
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="3"
+                    d="M1 1l8 8 8-8"
+                  />
+                </svg>
+              </div>
+            </div>
+            <!-- Tab Inner Content -->
+            <div
+              class="overflow-hidden transtion duration-500 group-focus:max-h-min max-h-0 ease"
+            >
+              <p class="py-2 text-justify text-gray-400">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Distinctio odio, sed ex obcaecati quae minima? Perspiciatis ad
+                earum maxime sit id perferendis. Consequuntur, sapiente dolores!
+              </p>
+            </div>
+          </div>
+          <!-- Tab 2 -->
+          <div class="py-1 border-b outline-none group" tabindex="2">
+            <!-- Tab Flex Container -->
+            <div
+              class="flex items-center justify-between text-gray-500 py-3 transtion hover:text-red-500 cursor-pointer ease goup"
+            >
+              <!-- Tab Title -->
+              <div
+                class="transition duration-500 ease group-hover:text-red-500"
+              >
+                How can i request a new browser?
+              </div>
+              <!-- Arrow -->
+              <div
+                class="transition duration-500 ease group-hover:text-red-500 group ease group-focus:-rotate-180"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+                  <path
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="3"
+                    d="M1 1l8 8 8-8"
+                  />
+                </svg>
+              </div>
+            </div>
+            <!-- Tab Inner Content -->
+            <div
+              class="overflow-hidden transtion duration-500 group-focus:max-h-min max-h-0 ease"
+            >
+              <p class="py-2 text-justify text-gray-400">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Distinctio odio, sed ex obcaecati quae minima? Perspiciatis ad
+                earum maxime sit id perferendis. Consequuntur, sapiente dolores!
+              </p>
+            </div>
+          </div>
+          <!-- Tab 3 -->
+          <div class="py-1 border-b outline-none group" tabindex="3">
+            <!-- Tab Flex Container -->
+            <div
+              class="flex items-center justify-between text-gray-500 py-3 transtion hover:text-red-500 cursor-pointer ease goup"
+            >
+              <!-- Tab Title -->
+              <div
+                class="transition duration-500 ease group-hover:text-red-500"
+              >
+                Is there a mobile App?
+              </div>
+              <!-- Arrow -->
+              <div
+                class="transition duration-500 ease group-hover:text-red-500 group ease group-focus:-rotate-180"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+                  <path
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="3"
+                    d="M1 1l8 8 8-8"
+                  />
+                </svg>
+              </div>
+            </div>
+            <!-- Tab Inner Content-->
+            <div
+              class="overflow-hidden transtion duration-500 group-focus:max-h-min max-h-0 ease"
+            >
+              <p class="py-2 text-justify text-gray-400">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Distinctio odio, sed ex obcaecati quae minima? Perspiciatis ad
+                earum maxime sit id perferendis. Consequuntur, sapiente dolores!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
