Building newsletter section.

--- a/index.html
+++ b/index.html
@@ -450,5 +450,37 @@
         </div>
       </div>
     </section>
+
+    <!-- Newsletter Section -->
+    <section id="newsletter" class="bg-softBlue">
+      <div class="max-w-xl py-16 mx-auto">
+        <p
+          class="mb-6 text-lg tracking-widest text-white text-center uppercase"
+        >
+          35,000+ already joined
+        </p>
+        <h2
+          class="px-3 mb-6 text-3xl text-center font-semibold text-white md:text-4xl"
+        >
+          Stay up-to-date with what we're doing
+        </h2>
+        <!-- Form -->
+        <form
+          action=""
+          class="max-w-2xl text-base flex flex-col items-center justify-center px-0 mx-auto space-y-6 md:flex-row md:space-y-0 md:space-x-4 md:px-0"
+        >
+          <input
+            type="text"
+            class="flex-1 py-4 px-8 text-gray-500 text-center bg-white rounded-lg focus:outline-none hover:opacity-90"
+            placeholder="Enter your email address"
+          />
+          <input
+            type="submit"
+            class="inline-flex px-6 py-4 text-white bg-softRed rounded-lg hover:opacity-90"
+            value="Contact us"
+          />
+        </form>
+      </div>
+    </section>
   </body>
 </html>
