--- a/index.html
+++ b/index.html
@@ -482,5 +482,31 @@
         </form>
       </div>
     </section>
+
+    <!-- Footer -->
+    <section class="bg-veryDarkBlue py-16">
+      <div
+        class="container px-6 flex flex-col items-center justify-between space-y-12 mx-auto md:flex-row md:space-y-0"
+      >
+        <!-- Logo & Menu Container -->
+        <div
+          class="flex flex-col items-center justify-between text-grayishBlue space-y-8 md:flex-row md:space-y-0 md:space-x-10"
+        >
+          <img src="images/logo-bookmark-footer.svg" alt="" />
+          <a href="#" class="hover:text-softRed uppercase">Features</a>
+          <a href="#" class="hover:text-softRed uppercase">Download</a>
+          <a href="#" class="hover:text-softRed uppercase">FAQ</a>
+        </div>
+        <!-- Social Container -->
+        <div class="flex space-x-10">
+          <a href="#">
+            <img src="images/icon-facebook.svg" alt="" class="h-6 ficon" />
+          </a>
+          <a href="#">
+            <img src="images/icon-twitter.svg" alt="" class="h-6 ficon" />
+          </a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
